refact - refactored unit tests and builder feat - added generator for PlantUML format